First Revision of DFS BackTrack On Demand